force-app/main/default/objects/Individual_Contribution__b/Individual_Contribution__b.object-meta.xml
<CustomObject>
    <description>The contributions by individuals file contains information for contributions given by individuals. The method used to include contributions in this file has changed over time.</description>
    <label>Individual Contribution</label>
    <pluralLabel>Individual Contributions</pluralLabel>
</CustomObject>