force-app/main/default/objects/Individual_Contribution__b/fields/CITY__c.field-meta.xml
<CustomField>
    <fullName>CITY__c</fullName>
    <label>CITY</label>
    <length>30</length>
    <type>Text</type>
</CustomField>