force-app/main/default/objects/Individual_Contribution__b/fields/CMTE_ID__c.field-meta.xml
<CustomField>
    <fullName>CMTE_ID__c</fullName>
    <description>A 9-character alpha-numeric code assigned to a committee by the Federal Election Commission</description>
    <inlineHelpText>Committee ID</inlineHelpText>
    <label>CMTE ID</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
</CustomField>