force-app/main/default/objects/Individual_Contribution__b/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Matched Contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Individual Contributions</relationshipLabel>
    <relationshipName>Individual_Contributions</relationshipName>
    <type>Lookup</type>
</CustomField>