force-app/main/default/objects/Individual_Contribution__b/fields/EMPLOYER__c.field-meta.xml
<CustomField>
    <fullName>EMPLOYER__c</fullName>
    <label>EMPLOYER</label>
    <length>38</length>
    <type>Text</type>
</CustomField>