force-app/main/default/objects/Individual_Contribution__b/fields/Matched__c.field-meta.xml
<CustomField>
    <fullName>Matched__c</fullName>
    <description>Field used to indicate if the record matches an existing contact.</description>
    <label>Matched</label>
    <length>10</length>
    <type>Text</type>
</CustomField>