force-app/main/default/objects/Individual_Contribution__b/fields/NAME__c.field-meta.xml
<CustomField>
    <fullName>NAME__c</fullName>
    <inlineHelpText>Contributor/Lender/Transfer Name</inlineHelpText>
    <label>NAME</label>
    <length>200</length>
    <type>Text</type>
</CustomField>