force-app/main/default/objects/Individual_Contribution__b/fields/OCCUPATION__c.field-meta.xml
<CustomField>
    <fullName>OCCUPATION__c</fullName>
    <label>OCCUPATION</label>
    <length>38</length>
    <type>Text</type>
</CustomField>