force-app/main/default/objects/Individual_Contribution__b/fields/STATE__c.field-meta.xml
<CustomField>
    <fullName>STATE__c</fullName>
    <label>STATE</label>
    <length>2</length>
    <type>Text</type>
</CustomField>