force-app/main/default/objects/Individual_Contribution__b/fields/SUB_ID__c.field-meta.xml
<CustomField>
    <fullName>SUB_ID__c</fullName>
    <inlineHelpText>FEC record number</inlineHelpText>
    <label>SUB ID</label>
    <length>19</length>
    <required>true</required>
    <type>Text</type>
</CustomField>