force-app/main/default/objects/Individual_Contribution__b/fields/Transaction_AMT__c.field-meta.xml
<CustomField>
    <fullName>Transaction_AMT__c</fullName>
    <label>Transaction Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>