force-app/main/default/objects/Individual_Contribution__b/fields/Transaction_DT__c.field-meta.xml
<CustomField>
    <fullName>Transaction_DT__c</fullName>
    <label>Transaction date</label>
    <type>DateTime</type>
</CustomField>