force-app/main/default/objects/Individual_Contribution__b/fields/ZIP_CODE__c.field-meta.xml
<CustomField>
    <fullName>ZIP_CODE__c</fullName>
    <label>ZIP CODE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>